--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,1 +1,85 @@
-<h1>Extension DEV is working</h1>
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width,initial-scale=1" />
+	<title>PhoneBurner Dial Session Companion</title>
+	<style>
+		:root{
+			--bg:#0b1220; --card:#0f1724; --muted:#9aa6b2; --text:#e6eef9; --primary:#5b8cff; --radius:12px; --border:rgba(255,255,255,.06)
+		}
+		*{box-sizing:border-box}
+		body{margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:var(--text);-webkit-font-smoothing:antialiased}
+		header{padding:28px 24px;border-bottom:1px solid var(--border);display:flex;align-items:center;gap:18px}
+		.brand{display:flex;flex-direction:column}
+		h1{margin:0;font-size:20px;letter-spacing:-0.2px}
+		p.lead{margin:6px 0 0;color:var(--muted);max-width:820px}
+		main{max-width:980px;margin:36px auto;padding:20px}
+		.card{background:var(--card);border-radius:var(--radius);padding:20px;border:1px solid var(--border);box-shadow:0 8px 32px rgba(2,6,23,0.6)}
+		.grid{display:grid;grid-template-columns:1fr 320px;gap:20px}
+		.cta{display:flex;flex-direction:column;gap:12px}
+		a.button{display:inline-block;padding:10px 14px;border-radius:10px;background:linear-gradient(180deg,var(--primary),#3e6ff0);color:#fff;text-decoration:none;font-weight:700}
+		code{background:rgba(255,255,255,.03);padding:6px 8px;border-radius:6px;color:var(--text);font-family:ui-monospace,SFMono-Regular,Menlo,monospace}
+		footer{max-width:980px;margin:20px auto;color:var(--muted);font-size:14px}
+		.muted{color:var(--muted)}
+		@media(max-width:840px){.grid{grid-template-columns:1fr}}
+	</style>
+</head>
+<body>
+	<header>
+		<div class="brand">
+			<h1>PhoneBurner Dial Session Companion</h1>
+			<div class="muted">Launch and follow PhoneBurner dial sessions directly from supported CRMs</div>
+		</div>
+	</header>
+
+	<main>
+		<div class="grid">
+			<section class="card">
+				<h2 style="margin-top:0">What this extension does</h2>
+				<p class="lead">This Chrome extension helps PhoneBurner customers scan CRM pages, create dial sessions, and follow live calls with an on-screen "Follow" widget. It supports optimized HubSpot integration (Level 3) plus generic scraping for other CRMs.</p>
+
+				<h3 style="margin-top:18px">How it works</h3>
+				<ul>
+					<li>Click the extension and scan a CRM page to collect selected contacts.</li>
+					<li>The extension posts the scanned contacts to the backend API which returns a `session_token` and `launch_url`.</li>
+					<li>The background service worker opens the PhoneBurner dial session in a popup and can restore a lightweight follow widget in the CRM tab.</li>
+				</ul>
+
+				<h3 style="margin-top:12px">Run locally</h3>
+				<p class="muted">Run the backend for local testing from the repository root:</p>
+				<pre style="background:transparent;padding:0;margin:8px 0"><code>php -S 127.0.0.1:8000 -t server/public</code></pre>
+
+				<h3 style="margin-top:12px">Developer notes</h3>
+				<ul>
+					<li>The extension UI and logic live in <code>chrome-extension/</code> — see <code>background.js</code> and <code>popup.js</code>.</li>
+					<li>Server API helpers are in <code>server/public/api/core/bootstrap.php</code> (use <code>api_ok</code>/<code>api_ok_flat</code>).</li>
+				</ul>
+			</section>
+
+			<aside class="card cta">
+				<div>
+					<strong style="display:block;font-weight:800;margin-bottom:8px">Get started</strong>
+					<a class="button" href="#" onclick="alert('Load the extension as an unpacked extension in Chrome (see README)')">Install / Load Unpacked</a>
+				</div>
+
+				<div>
+					<strong style="display:block;font-weight:800;margin-bottom:8px">Privacy</strong>
+					<p class="muted">Read how we handle data and tokens.</p>
+					<a class="button" href="/privacy.html">Privacy Policy</a>
+				</div>
+
+				<div>
+					<strong style="display:block;font-weight:800;margin-bottom:8px">Repository</strong>
+					<p class="muted">Source, issues, and PRs.</p>
+					<a class="button" href="https://github.com/jeffosness/pb-extension-dev" target="_blank">GitHub Repo</a>
+				</div>
+			</aside>
+		</div>
+	</main>
+
+	<footer>
+		<div class="muted" style="text-align:center">This extension runs only when you interact with it. Authentication tokens are stored locally in the browser.</div>
+	</footer>
+</body>
+</html>
