--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,76 +10,95 @@
 		}
 		*{box-sizing:border-box}
 		body{margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:var(--text);-webkit-font-smoothing:antialiased}
-		header{padding:28px 24px;border-bottom:1px solid var(--border);display:flex;align-items:center;gap:18px}
-		.brand{display:flex;flex-direction:column}
-		h1{margin:0;font-size:20px;letter-spacing:-0.2px}
-		p.lead{margin:6px 0 0;color:var(--muted);max-width:820px}
-		main{max-width:980px;margin:36px auto;padding:20px}
-		.card{background:var(--card);border-radius:var(--radius);padding:20px;border:1px solid var(--border);box-shadow:0 8px 32px rgba(2,6,23,0.6)}
-		.grid{display:grid;grid-template-columns:1fr 320px;gap:20px}
-		.cta{display:flex;flex-direction:column;gap:12px}
-		a.button{display:inline-block;padding:10px 14px;border-radius:10px;background:linear-gradient(180deg,var(--primary),#3e6ff0);color:#fff;text-decoration:none;font-weight:700}
-		code{background:rgba(255,255,255,.03);padding:6px 8px;border-radius:6px;color:var(--text);font-family:ui-monospace,SFMono-Regular,Menlo,monospace}
-		footer{max-width:980px;margin:20px auto;color:var(--muted);font-size:14px}
+		.wrap{max-width:1100px;margin:28px auto;padding:18px}
+		header{display:flex;align-items:center;gap:18px}
+		.brand h1{margin:0;font-size:28px}
+		.tag{color:var(--muted);margin-top:6px}
+		.hero{display:flex;gap:28px;margin-top:22px;align-items:flex-start}
+		.hero-left{flex:1}
+		.hero-right{width:360px}
+		.panel{background:var(--card);padding:22px;border-radius:12px;border:1px solid var(--border);box-shadow:0 14px 40px rgba(2,6,23,0.6)}
+		.lead{color:var(--muted);font-size:15px;margin-top:8px}
+		.benefits{display:flex;gap:12px;margin-top:18px}
+		.benefit{flex:1;padding:12px;border-radius:10px;background:linear-gradient(180deg,rgba(255,255,255,.02),transparent);border:1px solid var(--border)}
+		.primary-btn{display:inline-block;padding:10px 14px;border-radius:10px;background:linear-gradient(180deg,var(--primary),#3e6ff0);color:#fff;text-decoration:none;font-weight:800}
+		h2{margin:16px 0 8px}
+		ul{margin-left:18px}
+		.levels{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:12px}
+		.level{padding:12px;border-radius:8px;background:rgba(255,255,255,.02);border:1px solid var(--border)}
 		.muted{color:var(--muted)}
-		@media(max-width:840px){.grid{grid-template-columns:1fr}}
+		footer{margin-top:28px;color:var(--muted);text-align:center}
+		@media(max-width:920px){.hero{flex-direction:column}.hero-right{width:100%}.levels{grid-template-columns:1fr}}
 	</style>
 </head>
 <body>
-	<header>
-		<div class="brand">
-			<h1>PhoneBurner Dial Session Companion</h1>
-			<div class="muted">Launch and follow PhoneBurner dial sessions directly from supported CRMs</div>
-		</div>
-	</header>
+	<div class="wrap">
+		<header>
+			<div class="brand">
+				<h1>PhoneBurner Dial Session Companion</h1>
+				<div class="tag">Launch PhoneBurner power-dial sessions directly from your CRM — faster dialing, higher connect rates.</div>
+			</div>
+		</header>
 
-	<main>
-		<div class="grid">
-			<section class="card">
-				<h2 style="margin-top:0">What this extension does</h2>
-				<p class="lead">This Chrome extension helps PhoneBurner customers scan CRM pages, create dial sessions, and follow live calls with an on-screen "Follow" widget. It supports optimized HubSpot integration (Level 3) plus generic scraping for other CRMs.</p>
+		<div class="hero">
+			<div class="hero-left">
+				<div class="panel">
+					<h2>Get 3–4× more live calls with PhoneBurner</h2>
+					<p class="lead">PhoneBurner’s power dialer multiplies call throughput. Our Chrome extension brings that power to your existing CRM so you can start dial sessions from contact lists, deals, or companies — without leaving your CRM.</p>
 
-				<h3 style="margin-top:18px">How it works</h3>
-				<ul>
-					<li>Click the extension and scan a CRM page to collect selected contacts.</li>
-					<li>The extension posts the scanned contacts to the backend API which returns a `session_token` and `launch_url`.</li>
-					<li>The background service worker opens the PhoneBurner dial session in a popup and can restore a lightweight follow widget in the CRM tab.</li>
-				</ul>
+					<div class="benefits">
+						<div class="benefit"><strong>Save time</strong><div class="muted">Launch sessions in one click from CRM lists.</div></div>
+						<div class="benefit"><strong>Stay in context</strong><div class="muted">See the current contact while calling with the Follow widget.</div></div>
+						<div class="benefit"><strong>Works with many CRMs</strong><div class="muted">Three integration levels to match your CRM.</div></div>
+					</div>
 
-				<h3 style="margin-top:12px">Run locally</h3>
-				<p class="muted">Run the backend for local testing from the repository root:</p>
-				<pre style="background:transparent;padding:0;margin:8px 0"><code>php -S 127.0.0.1:8000 -t server/public</code></pre>
+					<h2>How it works</h2>
+					<ul>
+						<li>Install the extension and connect your PhoneBurner Personal Access Token (PAT).</li>
+						<li>From any supported CRM page click the extension and scan the list or selection.</li>
+						<li>The extension creates a PhoneBurner dial session and opens it in a popup — start dialing immediately.</li>
+					</ul>
 
-				<h3 style="margin-top:12px">Developer notes</h3>
-				<ul>
-					<li>The extension UI and logic live in <code>chrome-extension/</code> — see <code>background.js</code> and <code>popup.js</code>.</li>
-					<li>Server API helpers are in <code>server/public/api/core/bootstrap.php</code> (use <code>api_ok</code>/<code>api_ok_flat</code>).</li>
-				</ul>
-			</section>
+					<h2>Integration Levels</h2>
+					<p class="muted">We support three integration levels so the extension works well across different CRMs and page layouts.</p>
 
-			<aside class="card cta">
-				<div>
-					<strong style="display:block;font-weight:800;margin-bottom:8px">Get started</strong>
-					<a class="button" href="#" onclick="alert('Load the extension as an unpacked extension in Chrome (see README)')">Install / Load Unpacked</a>
+					<div class="levels">
+						<div class="level">
+							<strong>Level 1 — Generic</strong>
+							<p class="muted">No CRM-specific code. We attempt to parse the visible page to extract phone numbers. In our testing, Level 1 succeeds ~50% of the time depending on CRM layout.</p>
+						</div>
+						<div class="level">
+							<strong>Level 2 — Optimized Scraping</strong>
+							<p class="muted">We’ve analyzed the CRM layout and tuned extraction rules to improve success when parsing table/list views.</p>
+						</div>
+						<div class="level">
+							<strong>Level 3 — API Integration</strong>
+							<p class="muted">Deep integration using the CRM API to reliably obtain records and metadata. HubSpot is Level 3 and supports calling contacts, deals, and companies.</p>
+						</div>
+					</div>
+
+					<h2>Who this is for</h2>
+					<p class="muted">Sales teams who want to dramatically increase outbound call volume without changing CRMs. If you use PhoneBurner and want to dial from your CRM lists, this extension connects the flows.</p>
 				</div>
+			</div>
 
-				<div>
-					<strong style="display:block;font-weight:800;margin-bottom:8px">Privacy</strong>
-					<p class="muted">Read how we handle data and tokens.</p>
-					<a class="button" href="/privacy.html">Privacy Policy</a>
-				</div>
+			<aside class="hero-right panel">
+				<h2 style="margin-top:0">Try it</h2>
+				<p class="muted">Install the extension in Chrome (unpacked for development) and connect your PhoneBurner PAT from the extension UI.</p>
+				<a class="primary-btn" href="#" onclick="alert('Open the extension popup in Chrome and follow the connect flow')">Install / Open Extension</a>
 
-				<div>
-					<strong style="display:block;font-weight:800;margin-bottom:8px">Repository</strong>
-					<p class="muted">Source, issues, and PRs.</p>
-					<a class="button" href="https://github.com/jeffosness/pb-extension-dev" target="_blank">GitHub Repo</a>
-				</div>
+				<h2 style="margin-top:18px">Privacy</h2>
+				<p class="muted">The extension only reads CRM data when you ask it to. Tokens are stored locally. See our full privacy policy.</p>
+				<a class="primary-btn" href="/privacy.html">View Privacy Policy</a>
+
+				<h2 style="margin-top:18px">Need help?</h2>
+				<p class="muted">Contact us: <a href="mailto:jeffosness@gmail.com">jeffosness@gmail.com</a></p>
 			</aside>
 		</div>
-	</main>
 
-	<footer>
-		<div class="muted" style="text-align:center">This extension runs only when you interact with it. Authentication tokens are stored locally in the browser.</div>
-	</footer>
+		<footer>
+			<div class="muted">PhoneBurner Dial Session Companion — extension runs only when you interact with it. Authentication tokens are stored locally in your browser.</div>
+		</footer>
+	</div>
 </body>
 </html>
