Marketing: add PhoneBurner signup CTA and non-affiliation disclaimer

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -91,6 +91,10 @@
 				<p class="muted">The extension only reads CRM data when you ask it to. Tokens are stored locally. See our full privacy policy.</p>
 				<a class="primary-btn" href="/privacy.html">View Privacy Policy</a>
 
+				<h2 style="margin-top:18px">Don't have PhoneBurner?</h2>
+				<p class="muted">PhoneBurner increases call throughput and connect rates. If you don't yet have an account, consider signing up to support this integration work.</p>
+				<a class="primary-btn" href="https://phoneburner.biz" target="_blank">Sign up at PhoneBurner</a>
+
 				<h2 style="margin-top:18px">Need help?</h2>
 				<p class="muted">Contact us: <a href="mailto:jeffosness@gmail.com">jeffosness@gmail.com</a></p>
 			</aside>
@@ -98,6 +102,7 @@
 
 		<footer>
 			<div class="muted">PhoneBurner Dial Session Companion — extension runs only when you interact with it. Authentication tokens are stored locally in your browser.</div>
+			<div class="muted" style="margin-top:8px;font-size:13px">This extension is developed and maintained independently and is not built, endorsed, or maintained by PhoneBurner, PhoneBurner.com, or PhoneBurner, Inc.</div>
 		</footer>
 	</div>
 </body>
